# ClopHfit

./: .buildinfo  .codespellrc  .coveragerc  .cruft.json  .darglint  .editorconfig  .envrc  .flake8  .gitignore  .isort.cfg  .mdformat.toml  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .python-version  .readthedocs.yml  .taplo.toml  .yamlfmt.yml  00_noise_model_dashboard.ipynb  01_noise_characterization.ipynb  02_synthetic_data_generator.ipynb  03_fitting_method_comparison.ipynb  AGENTS.md  BRANCH_GEN_SUMMARY.md  CHANGELOG.md  CHANGELOG.rst  CODE_REVIEW.md  CONTRIBUTING.md  CONTRIBUTING.rst  DEV_SUMMARY.md  DROP_nbsphinx.txt  GEN_BRANCH_CONTEXT.md  LICENSE.txt  MERGE_DECISION.md  Makefile  NOISE_ANALYSIS_QUICKREF.md  NOISE_ANALYSIS_USAGE.md  NOISE_MODEL_ORGANIZATION.md  NOISE_MODEL_QUICKREF.md  NUTPIE_INTEGRATION.md  PRTECAN_MULTI_MCMC_DESIGN.md  (+41 more)
.doctrees/: click.doctree  environment.pickle  index.doctree
.doctrees/api/: api.doctree  binding.doctree  prenspire.doctree  prtecan.doctree
.doctrees/nbsphinx/tutorials/: prtecan.ipynb
.doctrees/references/: contributing.doctree  description.doctree  development.doctree  older.doctree  prenspire.doctree  prenspire.uml.doctree  prtecan.doctree  prtecan.uml.doctree  references.doctree
.doctrees/tutorials/: LMfit.doctree  oldscripts.doctree  prenspire.doctree  prtecan.doctree  tutorials.doctree
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  ci.yml.rej  constraints.txt  cruft-update.yml  cruft-update.yml.rej  docs.yml  lockfile-update.yml  pages.yml  release.yml  tests.yml  update-uv-lock.yml
_sources/: index.rst.txt
_sources/api/: api.rst.txt  prenspire.rst.txt
_sources/references/: contributing.rst.txt  development.rst.txt  prenspire.uml.rst.txt  prtecan.rst.txt  references.rst.txt
_sources/tutorials/: LMfit.ipynb.txt  oldscripts.rst.txt  prenspire.ipynb.txt  tutorials.rst.txt
analysis_results/: FITTING_CLEANUP_RECOMMENDATIONS.md  comprehensive_fitting_evaluation.py  debug_fitting_issues.py  realistic_synthetic_data.py
analysis_results/archive/: fitting_comparison_deterministic.csv  fitting_function_metrics.csv  improved_robust_fitting.py
api/: api.html  binding.html  prenspire.html  prtecan.html
benchmarks/: README.md  benchmark.py  benchmark_fitters.py  benchmark_utils.py  compare_error_models.py  compare_fitting_methods.py  compare_real_data.py  comprehensive_fitter_comparison.py  comprehensive_fitting_comparison.csv  comprehensive_fitting_results_with_L1.csv  final_comparison.py  final_comparison_results.csv  final_comparison_summary.csv  focused_comparison.py  outlier_magnitude_benchmark.py  realistic_synthetic_data.py  run_benchmark.py  simple_enhanced_robust.py  stress_test.py  synthetic_pKa_comparison.csv  tecan_fit_combinations.py  tecan_real_data_benchmark.py
dev/: README.md  __init__.py  error_modeling_fluorescence.md  noise_models.py
dev/robust_fitting_evaluation/: BENCHMARK_STATUS.md  README.md  cleanup_analysis_files.py  enhanced_robust_testing.py  error_scaling_impact_demo.py  final_robust_evaluation.py  methods_section.md  show_simulated_data.py  simple_enhanced_robust.py
docs/: README.md  click.rst  conf.py  constraints.txt  error_models.md  index.rst  mathematical_models.md  requirements-docs.txt  requirements.txt  usetmp.org  usetmp.rst
docs/api/: api.rst  binding.rst  clophfit.rst  modules.rst  prenspire.rst  prtecan.rst  prtecan.uml.rst
docs/misc/: TODO.rst  license.rst  misc.rst
docs/readme/: readme.rst
docs/references/: click.rst  contributing.rst  description.rst  development.rst  older.rst  prenspire.rst  prenspire.uml.rst  prtecan.rst  prtecan.uml.rst  references.rst
docs/tutorials/: LMfit.ipynb  oldscripts.org  oldscripts_TODO.org  oldscripts_TODO.rst  prenspire.ipynb  prtecan.ipynb  prtecan_development.ipynb  prtecan_tutorial.ipynb  tutorials.rst  usage.org  usage.rst  usage2.org  usage2.rst
references/: contributing.html  description.html  development.html  older.html  prenspire.html  prenspire.uml.html  prtecan.html  prtecan.uml.html  references.html
scripts/: benchmark_fitters.py  benchmark_gpu.py  compare_error_models.py  compare_methods.py  compare_methods.sh  error_model_analysis.py  my_comparison.py  sampler_benchmark.sh  test_synthetic_generation.py  update_changelog.py
src/clophfit/: __init__.py  __main__.py  _config.py  binding.py  cli.py  clophfit_types.py  logging_config.py  prtecan.py  types.py  utils.py
tests/: __init__.py  conftest.py  test_bayes.py  test_bayesian_x_error.py  test_binding.py  test_cli.py  test_cmdline.py  test_diagnostics.py  test_errors.py  test_evaluation.py  test_fit_comparison.py  test_fitter_test_utils.py  test_fitters_compare.py  test_fitting.py  test_imports.py  test_model_validation_smoke.py  test_odr.py  test_oldscripts.py  test_outlier_scores.py  test_pipeline.py  test_prenspire.py  test_production_methods.py  test_prtecan.py  test_prtecan_extra.py  test_residuals.py  test_scripts.py  test_tecan_fit_combinations_benchmark.py  test_tecan_real_data_benchmark.py  test_titration_fit_plate.py
tests/EnSpire/: 24well_clop0_95.csv  G10.csv  M1-A6-G12-nota  M1-A6-G12.csv  NTT-G10_note.csv  S202N-E2_pHs-nota  S202N-E2_pHs.csv  S202N-E2_pHs_nota  e2-T-without_sample_column.csv  e2dan-exwavelength.csv  e2dan-exwavelength2.csv  e2dan-with_sample_column.csv  h148g-spettroC-Efin.csv  h148g-spettroC-idx2.csv  h148g-spettroC-incomplete.csv  h148g-spettroC-nota  h148g-spettroC-nota-Err  h148g-spettroC-nota-Err.csv  h148g-spettroC-nota.csv  h148g-spettroC.csv
tests/Tecan/: 290212_100.xls  290212_150.xls  290212_20.xls  290212_5.78.xls  290212_50.xls  290212_6.38.xls  290212_6.83.xls  290212_7.24.xls  290212_7.67.xls  290212_7.67_repeated_lb.xls  290212_8.23.xls  290212_8.82.xls  290212_9.31.xls  290513_5.5.xls  290513_5.5_bad.xls  290513_8.8.xls  84wells_290212_20.xlsx  list.cl  list.cl20  list.pH  list.pH2  pH5.1_130913a-orig.xls
tests/data/: NTT-A04-Cl_note  copyIP.txt  ratio2P.txt  w.txt
tests/spec/: NTT-A04-Cl_note
tutorials/: LMfit.html  oldscripts.html  prenspire.html  prtecan.html  tutorials.html
(+158 files in other folders)
